--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Checkstyle -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.puppycrawl.tools</groupId> -->
+<!-- 			<artifactId>checkstyle</artifactId> -->
+<!-- 			<version>8.38</version> -->
+<!-- 		</dependency> -->
 
 	</dependencies>
 
