--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,18 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- Checkstyle -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.puppycrawl.tools</groupId> -->
-<!-- 			<artifactId>checkstyle</artifactId> -->
-<!-- 			<version>8.38</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.puppycrawl.tools</groupId> -->
+		<!-- <artifactId>checkstyle</artifactId> -->
+		<!-- <version>8.38</version> -->
+		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit</artifactId>
+			<version>0.15.0</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
