--- a/pom.xml
+++ b/pom.xml
@@ -57,22 +57,20 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Checkstyle -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.puppycrawl.tools</groupId> -->
-		<!-- <artifactId>checkstyle</artifactId> -->
-		<!-- <version>8.38</version> -->
-		<!-- </dependency> -->
-
+		<!-- Dependency ArchUnit -->
 		<dependency>
 			<groupId>com.tngtech.archunit</groupId>
 			<artifactId>archunit</artifactId>
 			<version>0.15.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- JETM -->
+		<dependency>
+			<groupId>fm.void.jetm</groupId>
+			<artifactId>jetm</artifactId>
+			<version>1.2.3</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
@@ -115,6 +113,12 @@
 				<plugin>
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>3.0.0</version>
+				</plugin>
+				<!-- PiTest Plugin -->
+				<plugin>
+					<groupId>org.pitest</groupId>
+					<artifactId>pitest-maven</artifactId>
+					<version>LATEST</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
