--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
 					<groupId>org.pitest</groupId>
 					<artifactId>pitest-maven</artifactId>
 					<version>LATEST</version>
+					<configuration>
+						<targetClasses>
+							<param>gal.udc.fic.vvs.email.archivador.*</param>
+							<param>gal.udc.fic.vvs.email.archivo.*</param>
+							<param>gal.udc.fic.vvs.email.correo.*</param>
+						</targetClasses>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
